--- a/sub_publication.html
+++ b/sub_publication.html
@@ -135,6 +135,15 @@
 <li>Bo Wang, Jichang Guo, Yan Zhang, <strong>Chongyi Li</strong>, Hierarchical feature concatenation-based kernel sparse representations for image categorization, <strong><ud2>The Visual Computer (TVC)</ud2></strong> (SCI, IF：1.468), 2016.  <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Hierarchical%20feature%20concatenation-based%20kernel%20sparse%20representations%20for%20image%20categorization.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 
 </ol>
+
+<h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Domestic Papers:</h4>
+
+<ol>
+  
+<li><strong>李重仪</strong>, Jichang Guo, Shanji Chen, et al., Underwater image resstoration based on minimum information loss principle and optical properties of underwater imaging, <strong><ud2>IEEE International Conference on Image Processing (ICIP)</ud2></strong>, 2016. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Underwater%20image%20restoration%20based%20on%20minimum%20information%20loss%20principle%20and%20optical%20properties%20of%20underwater%20imaging.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
+
+</ol>
   
 <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Invited Talk:</h4>
