--- a/sub_publication.html
+++ b/sub_publication.html
@@ -140,9 +140,12 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Domestic Papers:</h4>
 
 <ol>
-  
-<li><strong>李重仪</strong>, Jichang Guo, Shanji Chen, et al., Underwater image resstoration based on minimum information loss principle and optical properties of underwater imaging, <strong><ud2>IEEE International Conference on Image Processing (ICIP)</ud2></strong>, 2016. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Underwater%20image%20restoration%20based%20on%20minimum%20information%20loss%20principle%20and%20optical%20properties%20of%20underwater%20imaging.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
-
+<li>雍子叶, 郭继昌, 李重仪, 融于注意力机制的弱监督水下图像增强算法,浙江大学学报,2020. </li>
+<li>丛润民, 张禹墨, 张晨, 李重仪, 赵耀, 深度学习驱动的水下图像增强与复原研究进展, 信号处理, 2020. </li>
+<li>郭继昌, 李重仪, 郭春乐, 水下图像增强和复原方法研究进展综述, 中国图象图形学报, 2017, 3: 273-287. </li>
+<li>郭继昌, 李重仪, 张艳, 面向水下图像的质量评价方法, 中国图象图形学报, 2017, 1: 1-8. </li>
+<li>顾翔元, 郭继昌, 田煜衡, 李重仪, 基于条件互信息的空域隐写检测特征选择算法，天津大学学报，2017. </li>  
+<li>王建,   宋占杰, 李重仪, 水下图像增强方法研究现状, 海洋技术学报, 2016.</li>
 </ol>
   
 <h4>
