--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ Signal Processing : Image Communication
 
 <li><strong>SPIE</strong>:</li> JEI
 
-<li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020
+<li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020; AAAI 2021; CVPR 2021
 </ul>
 <br>
 <hr />    
