--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
-<li> 2020/10 -- One paper has been accepted by IEEE Trans. Image Processing </li>
+<li> 2020/10 -- One paper has been accepted by <strong>IEEE Trans. Image Processing.</strong> </li>
 <li>Qijian Zhang, Runmin Cong, Junhui Hou, <strong>Chongyi Li</strong>, and Yao Zhao, <ud2>CoADNet: Collaborative Aggregation-and-Distribution Networks for Co-Salient Object Detection</ud2> is accepted by <strong>NeurIPS 2020</strong>. <a href="" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <li>We released a survey about image colorization (Image Colorization: A Survey and Dataset). <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#ff0000">[Arxiv Version]</font></a></a></li>
 <li><strong>Chongyi Li</strong>, Runmin Cong, Yongri Piao, Qianqian Xu, and Chen Change Loy, <ud2>RGB-D Salient Object Detection with Cross-Modality Modulation and Selection</ud2> is accepted by <strong>ECCV2020</strong>. <a href="https://li-chongyi.github.io/Proj_ECCV20" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
