--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
+<li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award.</li>
 <li>Distinguished Dissertation Award of Beijing Society of Image and Graphics, 2018.</li>
 <li>"Outstanding Graduate Student" in Tianjin University, 2018.</li>
 <!--<li>Bohai Securities Fellowship, 2017.</li>
