--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2020/10 -- 2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence. <strong>Excellence Award</strong></li>
 <li> 2020/10 -- One paper has been accepted by <strong>IEEE Trans. Image Processing.</strong> </li>
 <li>Qijian Zhang, Runmin Cong, Junhui Hou, <strong>Chongyi Li</strong>, and Yao Zhao, <ud2>CoADNet: Collaborative Aggregation-and-Distribution Networks for Co-Salient Object Detection</ud2> is accepted by <strong>NeurIPS 2020</strong>. <a href="" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <li>We released a survey about image colorization (Image Colorization: A Survey and Dataset). <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#ff0000">[Arxiv Version]</font></a></a></li>
