--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a, a:visited { color : #0050e7; }
 <header>
 <h7>Chongyi Li</h7><br><br>
 <div>
-<img src="sub_img/lichongyi.jpg" border="0" width="80%"><br></div><br>
+<img src="sub_img/lichongyi_photo.jpg" border="0" width="80%"><br></div><br>
 
   
 <p>
