--- a/sub_projects.html
+++ b/sub_projects.html
@@ -15,7 +15,7 @@
 <h7>Chongyi Li</h7><br><br>
 <div>
 
-<img src="sub_img/lichongyi.jpg" border="0" width="80%"><br></div><br>
+<img src="sub_img/lichongyi_photo.jpg" border="0" width="80%"><br></div><br>
   
 <p>
 <small>lichongyi25@gmail.com lichongyi@tju.edu.cn</small><br><br>
