--- a/sub_publication.html
+++ b/sub_publication.html
@@ -68,6 +68,7 @@
 <li> Xiangyuan Gu, Jichang Guo, <strong>Chongyi Li</strong>, Lijun Xiao, A feature selection algorithm based on redundancy analysis and interaction weight, <strong><ud2>Applied Intelligence</ud2></strong> (SCI, IF=2.882), 2020. <a href="" target="_blank"><font color="#1C86EE">[PDF-Arxiv version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>
 <li> Bo Wang, Bowen Wei, Zitong Kang Li Hu, and <strong>Chongyi Li</strong>, Fast color balance and multi-path fusion for sandstorm image enhancement, <strong><ud2>Signal, Image and Video Processing</ud2></strong> (SCI, IF=1.794), 2020. <a href="https://link.springer.com/article/10.1007/s11760-020-01786-1" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>  
 <li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., Image Colorization: A Survey and Dataset. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--Arxiv Version]</font></a> </li>
+<li> <strong>Chongyi Li</strong>, Chunle Guo, Qiming Ai, Shangchen Zhou, Chen Change Loy, Flexible Piecewise Curves Estimation for Photo Enhancement. <a href="https://arxiv.org/pdf/2010.13412.pdf" target="_blank"><font color="#1C86EE">[PDF--Arxiv Version]</font></a> </li>
 </ol>    
   
 <h4>
