--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ a, a:visited { color : #0050e7; }
 <ul>
 <li> 2020/10 -- 2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence. <strong>Excellence Award</strong></li>
 <li> 2020/10 -- One paper has been accepted by <strong>IEEE Trans. Image Processing.</strong> </li>
-<li>Qijian Zhang, Runmin Cong, Junhui Hou, <strong>Chongyi Li</strong>, and Yao Zhao, <ud2>CoADNet: Collaborative Aggregation-and-Distribution Networks for Co-Salient Object Detection</ud2> is accepted by <strong>NeurIPS 2020</strong>. <a href="" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
+<li> 2020/09 -- One paper has been accepted by <strong>NeurIPS</strong> </li>
 <li>We released a survey about image colorization (Image Colorization: A Survey and Dataset). <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#ff0000">[Arxiv Version]</font></a></a></li>
 <li><strong>Chongyi Li</strong>, Runmin Cong, Yongri Piao, Qianqian Xu, and Chen Change Loy, <ud2>RGB-D Salient Object Detection with Cross-Modality Modulation and Selection</ud2> is accepted by <strong>ECCV2020</strong>. <a href="https://li-chongyi.github.io/Proj_ECCV20" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <li>We release the testing code of our Zero-DCE for low-light image enhancement <strong>(CVPR 2020)</strong>. You can find the <a href="https://github.com/Li-Chongyi/Zero-DCE" target="_blank"><font color="#ff0000">[Code]</font></a>. Have fun!</li>
