--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2020/12 -- Two papers have been selected as <strong>ESI Highly Cited Paper</strong></li>
+<li> 2020/12 -- One paper has been accepted by <strong>Information Science</strong></li>
 <li> 2020/10 -- 2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence. <strong>Excellence Award</strong></li>
 <li> 2020/10 -- One paper has been accepted by <strong>IEEE Trans. Image Processing.</strong> </li>
 <li> 2020/09 -- One paper has been accepted by <strong>NeurIPS</strong> </li>
@@ -315,6 +317,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
+<li>Two papers have been selected as ESI Highly Cited Paper.</li>
 <li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award.</li>
 <li>Distinguished Dissertation Award of Beijing Society of Image and Graphics, 2018.</li>
 <li>"Outstanding Graduate Student" in Tianjin University, 2018.</li>
