--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <div style="text-align: justify; display: block; margin-right: auto;">
-<p><strong>image processing, computer vision, and deep learning, particularly in the domains of</strong> 
-  <li>image and video restoration and enhancement: 1) images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day), 2) or special circumstances (underwater, weak illumination), 3) general photo enhancement, 4) image/depth super-resolution.</li>
-  <li>Salient object detection: 1) RGB-D salient object detection, 2) remote sensing image salient object detection.</li>
+<p>My primary reseach interests include image processing, computer vision, and deep learning, particularly in the domains of 
+  <li><strong>Image and video restoration and enhancement</strong> (developing algorithms to process an image or video so that result is more suitable than original image or video for specific application ): such as 1) images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day), 2) special circumstances (underwater, weak illumination, dark), 3) general photo enhancement, 4) image/depth super-resolution.</li>
+  <li><strong>Salient object detection</strong> (designing AI models to perceivce and understand scenes): such as 1) RGB-D salient object detection, 2) remote sensing image salient object detection.</li>
 
   
 </ul>
@@ -102,9 +102,9 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Call for Papers:</h2>  
   
 <ul>
-<li><font color="#000000"> Special Issue on Depth-Related Processing and Applications in Visual Systems, Multimedia Tools and Applications (SCI, IF: 2.101) <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/MTAP_SI_CFP.pdf" target="_blank"><font color="#ff0000">[CFP]</font></a></a>. Submission Deadline: November 1, 2020. <a href="https://www.springer.com/journal/11042/updates/17918156" target="_blue"><font color="#ff0000">[Offical Link]</font></a></a></li>
+<li><font color="#000000"> Special Issue on Depth-Related Processing and Applications in Visual Systems, Multimedia Tools and Applications (SCI, IF: 2.101) <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/MTAP_SI_CFP.pdf" target="_blank"><font color="#ff0000">[CFP]</font></a></a>. Submission Deadline: November 1, 2020. <a href="https://www.springer.com/journal/11042/updates/17918156" target="_blue"><font color="#ff0000">[Offical Link]</font></a></a></li>[Closed]
 <li><font color="#000000"> Special Issue on Visual Information Processing for Underwater Images and Videos: Theories, Algorithms, and Applications in Signal Processing : Image Communication (SCI, IF: 2.814) <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/SPIC_SI_cfp.pdf" target="_blank"><font color="#ff0000">[CFP]</font></a></a>. Submission Deadline: July 31, 2020. <a href="https://www.journals.elsevier.com/signal-processing-image-communication/call-for-papers/theories-algorithms-and-applications" target="_blue"><font color="#ff0000">[Offical Link]</font></a></a></li>[Closed]
-<li><font color="#000000"> Special Session in Asia-Pacific Signal and Information Processing Association Annual Summit and Conference(APSIPA ASC) 2019 [Closed]</font><a href="http://www.apsipa2019.org/#" target="_blank"><font color="#ff0000"> [Link]</font>: Special Session on Multi-source Data Processing and Analysis: Models, Methods and Applications <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/APSIPA-ASC-2019-CfP.pdf" target="_blank"><font color="#ff0000">[CFP]</font></a></a></li>[closed]
+<li><font color="#000000"> Special Session in Asia-Pacific Signal and Information Processing Association Annual Summit and Conference(APSIPA ASC) 2019 [Closed]</font><a href="http://www.apsipa2019.org/#" target="_blank"><font color="#ff0000"> [Link]</font>: Special Session on Multi-source Data Processing and Analysis: Models, Methods and Applications <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/APSIPA-ASC-2019-CfP.pdf" target="_blank"><font color="#ff0000">[CFP]</font></a></a></li>[Closed]
 
 </ul>
 <br>
