--- a/index.html
+++ b/index.html
@@ -89,8 +89,15 @@ a, a:visited { color : #0050e7; }
 <ul>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>My primary reseach interests include image processing, computer vision, and deep learning, particularly in the domains of 
-  <li><strong>Image and video restoration and enhancement</strong> (developing algorithms to process an image or video so that result is more suitable than original image or video for specific application ): such as 1) images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day), 2) special circumstances (underwater, weak illumination, dark), 3) general photo enhancement, 4) image/depth super-resolution.</li>
-  <li><strong>Salient object detection</strong> (designing AI models to perceivce and understand scenes): such as 1) RGB-D salient object detection, 2) remote sensing image salient object detection.</li>
+  <li><strong>Image and video restoration and enhancement</strong> The purpose is to develop algorithms to process an image or video so that result is more suitable than original image or video for specific application.</li> 
+  <li>adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day)</li> 
+  <li>special circumstances (underwater, weak illumination, dark)</li>
+  <li>general photo enhancement</li>
+  <li>image/depth super-resolution, image debluring, image denosing</li>
+  <li><strong>Salient object detection</strong> The purpose is to design AI models to perceivce and understand scenes.</li>
+  <li>RGB-D salient object detection</li> 
+  <li>co-salient object detection</li>
+  <li>remote sensing image salient object detection</li>
 
   
 </ul>
