--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@ a, a:visited { color : #0050e7; }
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>My primary reseach interests include image processing, computer vision, and deep learning, particularly in the domains of 
   <li><strong>Image and video restoration and enhancement</strong> The purpose is to develop algorithms to process an image or video so that result is more suitable than original image or video for specific application.</li> 
-  <li>adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day)</li> 
-  <li>special circumstances (underwater, weak illumination, dark)</li>
-  <li>general photo enhancement</li>
-  <li>image/depth super-resolution, image debluring, image denosing</li>
+  <p>adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day)</p> 
+  <p>special circumstances (underwater, weak illumination, dark)</p>
+  <p>general photo enhancement</li>
+  <p>image/depth super-resolution, image debluring, image denosing</p>
   <li><strong>Salient object detection</strong> The purpose is to design AI models to perceivce and understand scenes.</li>
-  <li>RGB-D salient object detection</li> 
-  <li>co-salient object detection</li>
-  <li>remote sensing image salient object detection</li>
+  <p>RGB-D salient object detection</p> 
+  <p>co-salient object detection</p>
+  <p>remote sensing image salient object detection</p>
 
   
 </ul>
