--- a/index.html
+++ b/index.html
@@ -90,20 +90,18 @@ a, a:visited { color : #0050e7; }
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>My primary reseach interests include image processing, computer vision, and deep learning, particularly in the domains of 
   <li><strong>Image and video restoration and enhancement</strong> The purpose is to develop algorithms to process an image or video so that result is more suitable than original image or video for specific application. The specific research topics are</li> 
-
-		<ol type="a" start="3">
-			<li>有颌总纲</li>
-			<li>盾皮鱼纲</li>
-			<li>软骨鱼纲</li>
-		</ol>
-<p>adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day)</p> 
-  <p>special circumstances (underwater, weak illumination, dark)</p>
-  <p>general photo enhancement</li>
-  <p>image/depth super-resolution, image debluring, image denosing</p>
+  <ol type="a" start="4">
+      <li>restoring and enhancing the images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day)</li>
+      <li>restoring and enhancing the images and videos captured in special circumstances (underwater, weak illumination, dark)</li>
+      <li>general photo enhancement, auto image retouching</li>
+      <li>image/depth super-resolution, image debluring, image denosing</li>
+  </ol>
   <li><strong>Salient object detection</strong> The purpose is to design AI models to perceivce and understand scenes. The specific research topics are</li>
-  <p>RGB-D salient object detection</p> 
-  <p>co-salient object detection</p>
-  <p>remote sensing image salient object detection</p>
+  <ol type="a" start="3">
+      <li>RGB-D salient object detection</li>
+      <li>co-salient object detection</li>
+      <li>remote sensing image salient object detection</li>
+  </ol>  
 
   
 </ul>
