--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ a, a:visited { color : #0050e7; }
   <li><strong>Image and video restoration and enhancement</strong> The purpose is to develop algorithms to process an image or video so that result is more suitable than original image or video for specific application. The specific research topics are</li> 
   <ol type="a" start="1">
       <li>restoring and enhancing the images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day)</li>
-      <li>restoring and enhancing the images and videos captured in special circumstances (underwater, weak illumination, dark)</li>
+      <li>restoring and enhancing the images and videos captured in special circumstances or devices (underwater, weak illumination, dark, under-display devices)</li>
       <li>general photo enhancement, auto image retouching</li>
       <li>image/depth super-resolution, image debluring, image denosing</li>
   </ol>
