--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2021/01 -- I am nominated with honor to serve as an Associate Editor of the Springer Journal of Signal, Image and Video Processing (IF: 1.794).</strong></li>
 <li> 2020/12 -- Two papers have been selected as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2020/12 -- One paper has been accepted by <strong>Information Science</strong></li>
 <li> 2020/10 -- 2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence. <strong>Excellence Award</strong></li>
@@ -356,6 +357,9 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service:</h2>
 
 <ul>
+<br><strong>Associate Editor</strong></br>
+Springer Journal of Signal, Image and Video Processing (IF: 1.794)
+
 <br><strong>Guest Editor</strong></br>
 Signal Processing : Image Communication
 
