--- a/index.html
+++ b/index.html
@@ -289,6 +289,43 @@ a, a:visited { color : #0050e7; }
         <br>
 	<br>
         <div class="publication">
+            <img src="./NeurIPS2020_logo.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://proceedings.neurips.cc/paper/2020/file/4dc3ed26a29c9c3df3ec373524377a5b-Paper.pdf">CoADNet: Collaborative Aggregation-and-Distribution Networks for Co-Salient Object Detection</a>
+                </strong>
+		 <em><b>NeurIPS, 2020</b></em>
+                <br>
+                Qijian Zhang, Runmin Cong, Junhui Hou, <b>Chongyi Li</b>, and Yao Zhao.
+                <br>
+                <span class="links">
+                    <a href="https://proceedings.neurips.cc/paper/2020/file/4dc3ed26a29c9c3df3ec373524377a5b-Paper.pdf">PDF</a>| 
+                    <a href="https://rmcong.github.io/proj_CoADNet.html">Project Page</a>
+                </span>
+           </p>
+        </div>
+        <br>
+	<br>
+        <div class="publication">
+            <img src="./TIP_RS2020_logo.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense attention fluid network for salient object detection in optical remote sensing images</a>
+                </strong>
+		 <em><b>TIP, 2020</b></em>
+                <br>
+                Qijian Zhang, Runmin Cong, <b>Chongyi Li</b>, Ming-Ming Cheng, Yuming Fang, Xiaochun Cao, Yao Zhao, and Sam Kwong.
+                <br>
+                <span class="links">
+                    <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">PDF</a>| 
+                    <a href="https://rmcong.github.io/proj_DAFNet.html">Project Page</a>
+                    <a href="https://github.com/rmcong/EORSSD-dataset">Dataset</a>
+                </span>
+           </p>
+        </div>
+        <br>
+	<br>
+        <div class="publication">
             <img src="./depth_SR_logo.png" class="publogo" height="130" width="300 px">
             <p> 
                 <strong>
