--- a/sub_publication.html
+++ b/sub_publication.html
@@ -168,6 +168,7 @@
 
 <ol>
   
+<li> A System and Method for Processing an Image<a href="https://scholars.cityu.edu.hk/en/publications/a-system-and-method-for-processing-an-image(6dd139bf-1473-4f1f-ba83-799a891e9d9d).html" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li> 
 <li> ZL 2016 1 0606187.9 <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8F%91%E6%98%8E%E4%B8%93%E5%88%A9%E8%AF%81%E4%B9%A6-%E4%B8%80%E7%A7%8D%E5%9F%BA%E4%BA%8E%E6%9C%80%E4%BC%98%E5%8C%96%E9%A2%9C%E8%89%B2%E4%BF%AE%E6%AD%A3%E5%92%8C%E5%9B%9E%E5%BD%92%E6%A8%A1%E5%9E%8B%E7%9A%84%E6%B0%B4%E4%B8%8B%E5%9B%BE%E5%83%8F%E5%A4%8D%E5%8E%9F%E6%96%B9%E6%B3%95.jpg" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> ZL 2016 1 1028224.9 <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8F%91%E6%98%8E%E4%B8%93%E5%88%A9%E8%AF%81%E4%B9%A6-%E5%9F%BA%E4%BA%8E%E5%8D%B7%E7%A7%AF%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C%E5%92%8C%E5%85%88%E9%AA%8C%E4%BF%A1%E6%81%AF%E7%9A%84%E5%9B%BE%E5%83%8F%E5%8E%BB%E9%9B%BE%E6%96%B9%E6%B3%95.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
 <li> ZL 2016 1 0244589.9 <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8F%91%E6%98%8E%E4%B8%93%E5%88%A9%E8%AF%81%E4%B9%A6_%E4%B8%80%E7%A7%8D%E7%AB%8B%E4%BD%93%E8%A7%86%E8%A7%89%E6%98%BE%E8%91%97%E6%80%A7%E6%A3%80%E6%B5%8B%E6%96%B9%E6%B3%95.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li>
