--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
-
+<li> 2020/01 -- One paper has been accepted by <strong>Frontiers of Computer Science</strong></li>
 <li> 2021/01 -- I am nominated with honor to serve as an <strong>Associate Editor</strong> of the Springer Journal of Signal, Image and Video Processing (IF: 1.794).</strong></li>
 <li> 2020/12 -- Two papers have been selected as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2020/12 -- One paper has been accepted by <strong>Information Science</strong></li>
