--- a/sub_publication.html
+++ b/sub_publication.html
@@ -54,6 +54,13 @@
 </ol>   
   -->  
 <h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021:</h4>
+
+<ol>
+<li> Bo Wang, Li Hu, Bowen Wei, Zitong Kang, and <strong>Chongyi Li</strong>, Nighttime image dehazing using color cast removal and dual path multi-scale fusion strategy, <strong><ud2>Frontiers of Computer Science</ud2></strong> (SCI, IF=1.940), 2021. <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>  
+</ol> 
+  
+<h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020:</h4>
 
 <ol>
@@ -67,7 +74,8 @@
 <li> Qijian Zhang, Runmin Cong, <strong>Chongyi Li</strong>, et al., Dense attention fluid network for salient object detection in optical remote sensing images, <strong><ud2>IEEE Transactions on Image Processing</ud2></strong> (SCI, IF=9.34), 2020. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a><a href="https://arxiv.org/pdf/2011.13144.pdf" target="_blank"><font color="#1C86EE">[PDF-Arxiv version]</font></a> <a href="https://rmcong.github.io/proj_DAFNet.html" target="_blank"><font color="#1C86EE">[Project]</font></a></li>
 <li> Qing Qi, Jichang Guo, <strong>Chongyi Li</strong>, and Lijun Xiao, Blind face images deblurring with enhancement, <strong><ud2>Multimedia Tools and Applications</ud2></strong> (SCI, IF=2.6), 2019.  <a href="https://link.springer.com/article/10.1007/s11042-020-09460-x" target="_blank"><font color="#1C86EE">[PDF]</font></a> </li> 
 <li> Xiangyuan Gu, Jichang Guo, <strong>Chongyi Li</strong>, Lijun Xiao, A feature selection algorithm based on redundancy analysis and interaction weight, <strong><ud2>Applied Intelligence</ud2></strong> (SCI, IF=2.882), 2020. <a href="" target="_blank"><font color="#1C86EE">[PDF-Arxiv version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>
-<li> Bo Wang, Bowen Wei, Zitong Kang, Li Hu, and <strong>Chongyi Li</strong>, Fast color balance and multi-path fusion for sandstorm image enhancement, <strong><ud2>Signal, Image and Video Processing</ud2></strong> (SCI, IF=1.794), 2020. <a href="https://link.springer.com/article/10.1007/s11760-020-01786-1" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>  
+<li> Bo Wang, Bowen Wei, Zitong Kang, Li Hu, and <strong>Chongyi Li</strong>, Fast color balance and multi-path fusion for sandstorm image enhancement, <strong><ud2>Signal, Image and Video Processing</ud2></strong> (SCI, IF=1.794), 2020. <a href="https://link.springer.com/article/10.1007/s11760-020-01786-1" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>
+<li> Bo Wang, Li Hu, Bowen Wei, Zitong Kang, and <strong>Chongyi Li</strong>, Nighttime image dehazing using color cast removal and dual path multi-scale fusion strategy, <strong><ud2>Frontiers of Computer Science</ud2></strong> (SCI, IF=1.940), 2020. <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>  
 <li> Hua Li, Runming Cong, Sam Kwong, Chuanbo Chen, Qianqian Xu, and <strong>Chongyi Li</strong>,  Stereo superpixel: An iterative framework based on parallax consistency and collaborative optimization, <strong><ud2>Information Science</ud2></strong> (SCI, IF=5.524), 2020. <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>  
 <li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., Image Colorization: A Survey and Dataset. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--Arxiv Version]</font></a> </li>
 <li> <strong>Chongyi Li</strong>, Chunle Guo, Qiming Ai, Shangchen Zhou, Chen Change Loy, Flexible Piecewise Curves Estimation for Photo Enhancement. <a href="https://arxiv.org/pdf/2010.13412.pdf" target="_blank"><font color="#1C86EE">[PDF--Arxiv Version]</font></a> </li>
