--- a/sub_publication.html
+++ b/sub_publication.html
@@ -57,6 +57,7 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021:</h4>
 
 <ol>
+<li> Peixian Zhuang, <strong>Chongyi Li</strong>, Xueyang Fu, Jiamin Wu, and Qionghai Dai, Bayesian retinex underwater image enhancement, <strong><ud2>Engineering Applications of Artificial Intelligence</ud2></strong> (SCI, IF=3.526), 2021. <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>  
 <li> Bo Wang, Li Hu, Bowen Wei, Zitong Kang, and <strong>Chongyi Li</strong>, Nighttime image dehazing using color cast removal and dual path multi-scale fusion strategy, <strong><ud2>Frontiers of Computer Science</ud2></strong> (SCI, IF=1.940), 2021. <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>  
 </ol> 
   
