--- a/Proj_ECCV20.html
+++ b/Proj_ECCV20.html
@@ -246,14 +246,14 @@
           <tbody><tr>
             <td width="20%">
               <center>
-                <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank" class="imageLink"><img src="./ECCV20_files/ECCV20_logo.png" ,="" width="50%"></a><br><br>
-                <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank">Paper</a>
+                <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530222.pdf" target="_blank" class="imageLink"><img src="./ECCV20_files/ECCV20_logo.png" ,="" width="50%"></a><br><br>
+                <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530222.pdf" target="_blank">Paper</a>
               </center>
             </td>
             <td width="20%">
               <center>
-                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./ECCV20_files/ECCV20_logo.png" ,="" width="50%"></a><br><br>
-                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supplementary Material</a>
+                <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530222.pdf" target="_blank" class="imageLink"><img src="./ECCV20_files/ECCV20_logo.png" ,="" width="50%"></a><br><br>
+                <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530222-supp.pdf" target="_blank">Supplementary Material</a>
               </center>
             </td>
             <td width="20%">
