--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ Signal Processing : Image Communication
 <br>Multimedia Tools and Applications
 
 <br><strong>Reviewer</strong></br>
-<li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
+<li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
 
 <li><strong>Elsevier</strong>:</li> CVIUJOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
 
