--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -2,11 +2,11 @@
 
 html xmlns=httpwww.w3.org1999xhtmlheadmeta http-equiv=Content-Type content=texthtml; charset=UTF-8
   
-  titleZero-Reference Deep Curve Estimation for Low-Light Image Enhancementtitle
+  title Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation
   !--=================Meta tags==========================--
   meta name=robots content=index,follow
-  meta name=description content=Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement.
-  meta name=keywords content=Zero-Reference
+  meta name=description content=Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation.
+  meta name=keywords content=Zero-DCE++
   link rel=author href=httpsli-chongyi.github.io
   !--=================js==========================--
   link href=.Zero-DCE_filescss.css rel=stylesheet type=textcss
@@ -140,20 +140,15 @@ bodydiv id=MathJax_Message style=display none;div
         h1for Low-Light Image Enhancementh1
         !--=================Authors==========================--
         div class=authors
-          Chunle Guo sup1sup &nbsp;
-          a href=httpsli-chongyi.github.io target=_blankChongyi Lia sup2sup &nbsp;
-          Jichang Guo sup1sup &nbsp;
-          a href=httppersonal.ie.cuhk.edu.hk~ccloyindex.html target=_blankChen Change Loya sup3sup&nbsp;
-          a href=httpssites.google.comsitejunhuihoushomepage target=_blankJunhui Houa sup2sup&nbsp;
-          a href=httpswww.cs.cityu.edu.hk~cssamkresearch_groupindex.html target=_blankSam Kwonga sup2sup&nbsp;
-          a href=httpsrmcong.github.io target=_blankRunmin Conga sup4sup
+          a href=httpsli-chongyi.github.io target=_blankChongyi Lia sup1sup &nbsp;
+          Chunle Guo sup2sup &nbsp;
+          a href=httppersonal.ie.cuhk.edu.hk~ccloyindex.html target=_blankChen Change Loya sup1sup&nbsp;
         div
 
         div class=affiliations 
-          sup1sup Tianjin University, Tianjin, China br
-          sup2sup City University of Hong Kong, Hong Kongbr
-          sup3sup Nanyang Technological University, Singaporebr
-          sup4sup Beijing Jiaotong University, Beijing, China
+
+          sup1sup Nanyang Technological University, Singaporebr
+          sup2sup Nankai University, Tianjin, China
         div
         !--=================Tabs==========================
         ul id=tabs
@@ -170,7 +165,8 @@ bodydiv id=MathJax_Message style=display none;div
         br
         p
           div style=text-align justify; display block; margin-right auto;
-          pThe paper presents a novel method, bZero-Reference Deep Curve Estimation (Zero-DCE)b, which formulates light enhancement as a task of image-specific curve estimation with a deep network.  Our method trains a lightweight deep network, DCE-Net, to estimate pixel-wise and high-order curves for dynamic range adjustment of a given image. The curve estimation is specially designed, considering pixel value range, monotonicity, and differentiability. Zero-DCE is appealing in its relaxed assumption on reference images, i.e., it does not require any paired or unpaired data during training. This is achieved through a set of carefully formulated non-reference loss functions, which implicitly measure the enhancement quality and drive the learning of the network. Our method is efficient as image enhancement can be achieved by an intuitive and simple nonlinear curve mapping. Despite its simplicity, we show that it generalizes well to diverse lighting conditions. Extensive experiments on various benchmarks demonstrate the advantages of our method over state-of-the-art methods qualitatively and quantitatively. Furthermore, the potential benefits of our Zero-DCE to face detection in the dark are discussed.p
+          pThis work (Zero-DCE++) is an extension of our earlier conference version that has appeared in CVRP2020 (Zero-DCE).  Zero-DCE++ has a fast inference speed (1000/11 FPS on single GPU/CPU
+for an image with a size of 1200×900×3) while keeping the enhancement performance of Zero-DCE.  
         p
       div
       
@@ -197,11 +193,13 @@ bodydiv id=MathJax_Message style=display none;div
       div class=section abstract
         h2Highlightsh2
         ol
-          lipWe propose the first low-light enhancement network that is bindependent of paired and unpaired training datab, thus avoiding the risk of overfitting. As a result, our method generalizes well to various lighting conditions.pli
-          lipWe design an image-specific curve that is able to bapproximate pixel-wise and higher-order curves by iteratively applying itselfb. Such image-specific curve can effectively perform mapping within a wide dynamic range.pli
-          lipWe show the potential of training a deep image enhancement model in the absence of reference images through task-specific non-reference loss functions that indirectly evaluate enhancement quality.  It is capable of processing images in real-time (babout 500 FPS for images of size 6404803 on GPU) and takes only 30 minutes for trainingb.pli
-        ol
+          lipWe propose the first low-light enhancement network that is independent of paired and unpaired training data, thus avoiding the risk of overfitting. As a result, our method generalizes well to various lighting conditions. pli
+          lipWe design an image-specific curve that is able to approximate pixel-wise and higher-order curves by iteratively applying itself. Such image-specific curve can effectively perform mapping within a wide dynamic range.pli
+          lipWe show the potential of training a deep image enhancement model in the absence of reference images through task-specific non-reference loss functions that indirectly evaluate enhancement quality.pli
+          lipThe proposed Zero-DCE can be accelerated considerably while still keeping impressive enhancement performance. We provide multiple options to balance the enhancement performance and the cost of computational resources.pli        
+       ol
       div
+<!-
       !--=================Applications==========================--
       div class=section ,= id=results
         h2Resultsh2
@@ -297,7 +295,7 @@ To test the impact of training data, we retrain the Zero-DCE on  different datas
         p
 Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr color spaces).
         p
-  
+  -->
             !--=================Materials==========================--
       div class=section materials ,= id=materials
         h2Materialsh2
