--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <span class="links">
                     <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">PDF</a>| 
-                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE++.html">Project Page</a>| 
+                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>| 
                     <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Code</a>
                 </span>
             </p>
