--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -170,7 +170,7 @@
       <div class="section abstract">
         <h2>Highlights</h2>
         <ol>
-          <div<li><p>We propose the first low-light enhancement network that is independent of paired and unpaired training data, thus avoiding the risk of overfitting. As a result, our method generalizes well to various lighting conditions.</p></li></div>
+          <li><p>We propose the first low-light enhancement network that is independent of paired and unpaired training data, thus avoiding the risk of overfitting. As a result, our method generalizes well to various lighting conditions.</p></li>
           <li><p>We design an image-specific curve that is able to approximate pixel-wise and higher-order curves by iteratively applying itself. Such image-specific curve can effectively perform mapping within a wide dynamic range.</p></li>
           <li><p>We show the potential of training a deep image enhancement model in the absence of reference images through task-specific non-reference loss functions that indirectly evaluate enhancement quality.</p></li>
           <li><p>The proposed Zero-DCE can be accelerated considerably while still keeping impressive enhancement performance. We provide multiple options to balance the enhancement performance and the cost of computational resources.</p></li>
@@ -200,7 +200,7 @@
           </center>
         </div>
         <br>
-Coming soon.
+        Coming soon.
         </p>
   
             <!--=================Materials==========================-->
