--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -217,7 +217,7 @@
             <td width="20%">
               <center>
                 <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/CVPR20_logo.png" ,="" width="80%"></a><br><br>
-                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supplementary Material</a>
+                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supple</a>
               </center>
             </td>
             <td width="20%">
@@ -235,8 +235,8 @@
             </td>
             <td width="20%">
               <center>
-                <a href="https://github.com/Li-Chongyi/Zero-DCE++" target="_blank" class="imageLink"><img src="./Zero-DCE_files/icon_github.png" ,="" width="40%"></a><br><br>
-                <a href="https://github.com/Li-Chongyi/Zero-DCE++" target="_blank">Code and Model (Zero-DCE++)</a>
+                <a href="https://github.com/Li-Chongyi/Zero-DCE_extension" target="_blank" class="imageLink"><img src="./Zero-DCE_files/icon_github.png" ,="" width="40%"></a><br><br>
+                <a href="https://github.com/Li-Chongyi/Zero-DCE_extension" target="_blank">Code and Model (Zero-DCE++)</a>
               </center>
             </td>
 
