--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -162,7 +162,7 @@
         <br>
         <p>
           <div style="text-align: justify; display: block; margin-right: auto;">
-          <p>This work (Zero-DCE++) is an extension of our earlier conference version that has appeared in CVRP2020 (<a href="https://li-chongyi.github.io/Proj_Zero-DCE.html/" target="_blank">Zero-DCE</a>). We further present an accelerated and light version of Zero-DCE, called Zero-DCE++, that takes advantage of a tiny network with just 10K parameters. Zero-DCE++ has a fast inference speed (1000/11 FPS on single GPU/CPU for an image with a size of 1200*900*3) while keeping the enhancement performance of Zero-DCE.</p>
+          <p>This work is an extension of our earlier conference version that has appeared in CVRP2020 (<a href="https://li-chongyi.github.io/Proj_Zero-DCE.html/" target="_blank">Zero-DCE</a>). We further present an accelerated and light version of Zero-DCE, called Zero-DCE++, that takes advantage of a tiny network with just 10K parameters. Zero-DCE++ has a fast inference speed (1000/11 FPS on single GPU/CPU for an image with a size of 1200*900*3) while keeping the enhancement performance of Zero-DCE.</p>
         </p>
       </div>
       
@@ -179,7 +179,7 @@
 
       <!--=================Differences==========================-->
       <div class="section abstract">
-        <h2>Differences</h2>
+        <h2>Modifications</h2>
         <ol>
           <li><p>We investigate the relations between the enhancement performance and the network structure, curve estimation, and input sizes. According to the investigation, we re-design the network structure, reformulate the curve formation, and control  the sizes of input image, and thus present an accelerated and light version Zero-DCE, called Zero-DCE++, which is more suitable for real-time enhancement on resource-limited devices.</p></li>
           <li><p>Comparing to our earlier work, without compromising  the enhancement performance, the trainable parameters (79K) and foating point operations (FLOPs) (84.99G) for an input image of size 1200*900*3 of Zero-DCE are reduced to 10K and 0.115G on Zero-DCE++. This translates to two times in runtime speed up, from 500 FPS in Zero-DCE to 1000 FPS in Zero-DCE++, for processing an image of size 1200*900*3 on a single NVIDIA 2080Ti GPU. In addition, even only with Intel Core i9-10920X CPU@3.5GHz, the processing time of Zero-DCE also can be reduced from 10s to 0.09s on Zero-DCE++, a 111 times speed up on a single CPU setting. The training time is also reduced from 30 minutes to 20 minutes.</p></li>
@@ -217,7 +217,7 @@
             <td width="20%">
               <center>
                 <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/CVPR20_logo.png" ,="" width="80%"></a><br><br>
-                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supple</a>
+                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supplementary</a>
               </center>
             </td>
             <td width="20%">
