--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
-  <title>Learning to Enhance Low-Light Image <br> via Zero-Reference Deep Curve Estimation</title>
+  <title>Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</title>
   <!--=================Meta tags==========================-->
   <meta name="robots" content="index,follow">
   <meta name="description" content="Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation.">
