--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <li> 2021/03 -- One paper has been accepted by <strong>IEEE Transactions on Pattern Analysis and Machine Intelligence (IF: 17.861)</strong></li>
-<li> 2021/03 -- One paper hits on <strong>CVPR</strong></li>
+<li> 2021/03 -- One paper hits on <strong>CVPR 2021</strong></li>
 <li> 2021/01 -- One paper has been selected as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2021/01 -- One paper has been accepted by <strong>Engineering Applications of Artificial Intelligence (IF: 3.526)</strong></li>
 <li> 2021/01 -- One paper has been accepted by <strong>Frontiers of Computer Science (IF: 1.940)</strong></li>
