--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@ a, a:visited { color : #0050e7; }
             <img src="./ACMMM_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
-                    <a href="">NuI-Go: Recursive Non-Local Encoder-Decoder Network for Retinal Image Non-Uniform Illumination Removal</a>
+                    <a href="https://dl.acm.org/doi/10.1145/3394171.3413928">NuI-Go: Recursive Non-Local Encoder-Decoder Network for Retinal Image Non-Uniform Illumination Removal</a>
                 </strong>
 		<em><b>ACM MM, 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Huazhu Fu, Runmin Cong, Zechao Li, Qianqian Xu.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
+                    <a href="https://dl.acm.org/doi/10.1145/3394171.3413928">PDF</a>| 
                     <a href="Proj_ACMMM20_NuI-Go.html">Project Page</a>| 
                     <a href="">Code</a>
                 </span>
@@ -438,7 +438,7 @@ Signal Processing : Image Communication
 
 <li><strong>SPIE</strong>:</li> JEI
 
-<li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020; AAAI 2021; CVPR 2021; IJCAI 2021;ICME 2021; ICCV2021
+<li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020; AAAI 2021; CVPR 2021; IJCAI 2021;ICME 2021; MICCAI 2021; ICCV2021
 </ul>
 <br>
 <hr />    
