--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ Signal Processing : Image Communication
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
 
-<li><strong>Elsevier</strong>:</li> CVIUJOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
+<li><strong>Elsevier</strong>:</li> CVIU, JOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
 
 <li><strong>Springer</strong>:</li> IJCV, VC, SCIS,  MVA,  EURASIP JIVP
 
