--- a/sub_publication.html
+++ b/sub_publication.html
@@ -52,7 +52,15 @@
 <li> Hua Li, Runmin Cong, <strong>Chongyi Li</strong>, et al., Stereo Superpixel: An Iterative Framework based on Parallax Consistency and Collaborative Optimization, <strong><ud2> Top Conference</ud2></strong> </li>   
 
 </ol>   
-  -->  
+  --> 
+<h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Book&Book Chapter:</h4>
+
+<ol>
+<li> <strong>Chongyi Li</strong>, Huazhu Fu, Miao Yang, Runmin Cong and Chunle Guo, Deep Retinal Image Non-uniform Illumination Removal (Book Chapter), Book: Generalization with Deep Learning: for improvement on Sensing Capability
+Zhenghua Chen, Min Wu, and Xiaoli Li, published in <strong><ud2>World Scientific</ud2></strong>, ISBN: 978-981-121-883-5, April 2021. <a href="https://www.worldscientific.com/worldscibooks/10.1142/11784" target="_blank"><font color="#1C86EE">[Online]</font></a></li>   
+</ol> 
+  
 <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021:</h4>
 
