--- a/index.html
+++ b/index.html
@@ -160,20 +160,43 @@ a, a:visited { color : #0050e7; }
 <div class="container">
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
+	
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
+            <img src="./ECCV20_files/ECCV20-visual_results.png" class="publogo" width="300 px">
             <p> 
                 <strong>
-                    <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
+                    <a href="">RGB-D Salient Object Detection with Cross-Modality Modulation and Selection</a>
                 </strong>
-		<em><b>CVPR, 2020</b></em>
+		<em><b>ECCV, 2020</b></em>
                 <br>
-                Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
+                <b>Chongyi Li</b>, Runmin Cong, Yongri Piao, Qianqian Xu, Chen Change Loy.
                 <br>
                 <span class="links">
-                    <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">PDF</a>| 
-                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>| 
-                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Code</a>
+                    <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530222.pdf">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/Proj_ECCV20">Project Page</a>| 
+                    <a href="https://github.com/Li-Chongyi/cmMS-ECCV20">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+        <div class="publication">
+            <img src="./Zero-DCE_files/zerodce++.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://ieeexplore.ieee.org/document/9369102">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
+                </strong>
+		<em><b>TPAMI, 2020</b></em>
+                <br>
+               <b>Chongyi Li*</b>, Chunle Guo, Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="https://ieeexplore.ieee.org/document/9369102">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE++.html">Project Page</a>| 
+                    <a href="https://github.com/Li-Chongyi/Zero-DCE_extension">Code</a>
                 </span>
             </p>
           </div>
