--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -216,8 +216,8 @@
 
             <td width="20%">
               <center>
-                <a href="" target="_blank" class="imageLink"><img src="" ,="" width="80%"></a><br><br>
-                <a href="" target="_blank">Journal Version</a>
+                <a href="https://ieeexplore.ieee.org/document/9369102/" target="_blank" class="imageLink"><img src="./Zero-DCE_files/TPAMI_logo.pn" ,="" width="80%"></a><br><br>
+                <a href="https://ieeexplore.ieee.org/document/9369102/" target="_blank">TPAMI</a>
               </center>
             </td>
             <td width="20%">
@@ -235,11 +235,12 @@
         <h2>Citation</h2>
         <div class="section bibtex">
           <pre>@Article{Zero-DCE++,
-          author = {},
-          title = {},
-          journal = {},
+          author = {Chongyi Li, Chunle Guo, Chen Change Loy},
+          title = {Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation},
+          journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
           pape={},
-          year = {}
+          year = {2021},
+          doi={10.1109/TPAMI.2021.3063604}
           }
           </pre>
         </div>
