--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -162,7 +162,7 @@
         <br>
         <p>
           <div style="text-align: justify; display: block; margin-right: auto;">
-          <p>This work is an extension of our earlier conference version that has appeared in CVRP2020 (<a href="https://li-chongyi.github.io/Proj_Zero-DCE.html/" target="_blank">Zero-DCE</a>). We further present an accelerated and light version of Zero-DCE, called Zero-DCE++, that takes advantage of a tiny network with just 10K parameters. Zero-DCE++ has a fast inference speed (1000/11 FPS on single GPU/CPU for an image with a size of 1200*900*3) while keeping the enhancement performance of Zero-DCE.</p>
+          <p>This work is an extension of our earlier conference version that has appeared in CVRP2020 (<a href="https://li-chongyi.github.io/Proj_Zero-DCE.html" target="_blank">Zero-DCE</a>). We further present an accelerated and light version of Zero-DCE, called Zero-DCE++, that takes advantage of a tiny network with just 10K parameters. Zero-DCE++ has a fast inference speed (1000/11 FPS on single GPU/CPU for an image with a size of 1200*900*3) while keeping the enhancement performance of Zero-DCE.</p>
         </p>
       </div>
       
@@ -241,6 +241,19 @@
           pape={},
           year = {2021},
           doi={10.1109/TPAMI.2021.3063604}
+          }
+          </pre>
+        </div>
+      </div>
+       <div class="section citation" ,="" id="citation">
+        <h2>Citation</h2>
+        <div class="section bibtex">
+          <pre>@Article{Zero-DCE,
+          author = {Guo, Chunle and Li, Chongyi and Guo, Jichang and Loy, Chen Change and Hou, Junhui and Kwong, Sam and Cong Runmin},
+          title = {Zero-reference deep curve estimation for low-light image enhancement},
+          journal = {CVPR},
+          pape={1780-1789},
+          year = {2020}
           }
           </pre>
         </div>
