--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -216,7 +216,7 @@
 
             <td width="20%">
               <center>
-                <a href="https://ieeexplore.ieee.org/document/9369102/" target="_blank" class="imageLink"><img src="./Zero-DCE_files/TPAMI_logo.pn" ,="" width="80%"></a><br><br>
+                <a href="https://ieeexplore.ieee.org/document/9369102/" target="_blank" class="imageLink"><img src="./Zero-DCE_files/TPAMI_logo.png" ,="" width="80%"></a><br><br>
                 <a href="https://ieeexplore.ieee.org/document/9369102/" target="_blank">TPAMI</a>
               </center>
             </td>
