--- a/Proj_Zero-DCE.html
+++ b/Proj_Zero-DCE.html
@@ -354,6 +354,7 @@ Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr
           </pre>
         </div>
       </div>
+          <div class="section bibtex">
           <pre>@Article{Zero-DCE++,
           author = {Chongyi Li, Chunle Guo, Chen Change Loy},
           title = {Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation},
