--- a/Proj_Zero-DCE++.html
+++ b/Proj_Zero-DCE++.html
@@ -235,7 +235,7 @@
         <h2>Citation</h2>
         <div class="section bibtex">
           <pre>@Article{Zero-DCE++,
-          author = {Chongyi Li, Chunle Guo, Chen Change Loy},
+          author ={Li, Chongyi and Guo, Chunle and Loy, Chen Change},
           title = {Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation},
           journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
           pape={},
