--- a/Proj_Zero-DCE.html
+++ b/Proj_Zero-DCE.html
@@ -171,7 +171,7 @@
         <p>
           <div style="text-align: justify; display: block; margin-right: auto;">
           <p>The paper presents a novel method, <b>Zero-Reference Deep Curve Estimation (Zero-DCE)</b>, which formulates light enhancement as a task of image-specific curve estimation with a deep network.  Our method trains a lightweight deep network, DCE-Net, to estimate pixel-wise and high-order curves for dynamic range adjustment of a given image. The curve estimation is specially designed, considering pixel value range, monotonicity, and differentiability. Zero-DCE is appealing in its relaxed assumption on reference images, i.e., it does not require any paired or unpaired data during training. This is achieved through a set of carefully formulated non-reference loss functions, which implicitly measure the enhancement quality and drive the learning of the network. Our method is efficient as image enhancement can be achieved by an intuitive and simple nonlinear curve mapping. Despite its simplicity, we show that it generalizes well to diverse lighting conditions. Extensive experiments on various benchmarks demonstrate the advantages of our method over state-of-the-art methods qualitatively and quantitatively. Furthermore, the potential benefits of our Zero-DCE to face detection in the dark are discussed.
-            We further present an accelerated and light version of Zero-DCE, called (<a href="https://li-chongyi.github.io/Proj_Zero-DCE++.html" target="_blank">Zero-DCE++</a>), that takes advantage of a tiny network with just 10K parameters. Zero-DCE++ has a fast inference speed (1000/11 FPS on single GPU/CPU for an image with a size of 1200*900*3) while keeping the enhancement performance of Zero-DCE.</p>
+            <b>We further present an accelerated and light version of Zero-DCE, called (<a href="https://li-chongyi.github.io/Proj_Zero-DCE++.html" target="_blank">Zero-DCE++</a>), that takes advantage of a tiny network with just 10K parameters. Zero-DCE++ has a fast inference speed (1000/11 FPS on single GPU/CPU for an image with a size of 1200*900*3) while keeping the enhancement performance of Zero-DCE</b>.</p>
         </p>
       </div>
       
@@ -313,7 +313,7 @@ Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr
             <td width="20%">
               <center>
                 <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/CVPR20_logo.png" ,="" width="80%"></a><br><br>
-                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supplementary Material</a>
+                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supplementary</a>
               </center>
             </td>
             <td width="20%">
