--- a/index.html
+++ b/index.html
@@ -160,38 +160,16 @@ a, a:visited { color : #0050e7; }
 <div class="container">
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
-	
-        <div class="publication">
-            <img src="./ECCV20_files/ECCV20-visual_results.png" class="publogo" width="300 px">
-            <p> 
-                <strong>
-                    <a href="">RGB-D Salient Object Detection with Cross-Modality Modulation and Selection</a>
-                </strong>
-		<em><b>ECCV, 2020</b></em>
-                <br>
-                <b>Chongyi Li</b>, Runmin Cong, Yongri Piao, Qianqian Xu, Chen Change Loy.
-                <br>
-                <span class="links">
-                    <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530222.pdf">PDF</a>| 
-                    <a href="https://li-chongyi.github.io/Proj_ECCV20">Project Page</a>| 
-                    <a href="https://github.com/Li-Chongyi/cmMS-ECCV20">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	<br />
-	<br />
-	
-        <div class="publication">
+
+	  <div class="publication">
             <img src="./Zero-DCE_files/zerodce++.png" class="publogo" width="300 px">
             <p> 
                 <strong>
-                    <a href="https://ieeexplore.ieee.org/document/9369102">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
+                    <a href="https://ieeexplore.ieee.org/document/9369102">Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</a>
                 </strong>
-		<em><b>TPAMI, 2020</b></em>
+		<em><b>TPAMI, 2021</b></em>
                 <br>
-               <b>Chongyi Li*</b>, Chunle Guo, Chen Change Loy.
+               <b>Chongyi Li</b>, Chunle Guo, Chen Change Loy.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/9369102">PDF</a>| 
@@ -204,6 +182,30 @@ a, a:visited { color : #0050e7; }
           <br>
 	<br />
 	<br />
+	
+        <div class="publication">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
+                </strong>
+		<em><b>CVPR, 2020</b></em>
+                <br>
+                Chunle Guo*, <b>Chongyi Li*</b>,  Jichang Guo, Chen Change Loy,  Junhui Hou,  Sam Kwong,  Runmin Cong.
+                <br>
+                <span class="links">
+                    <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>| 
+                    <a href="https://github.com/Li-Chongyi/Zero-DCE">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+
         <div class="publication">
             <img src="./ECCV20_files/ECCV20-visual_results.png" class="publogo" width="300 px">
             <p> 
