--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2021/04 -- One paper has been accepted by <strong>IEEE Geoscience and Remote Sensing Letters  (IF: 3.833)</strong></li>
 <li> 2021/04 -- One paper has been accepted by <strong>Applied Intelligence (IF: 3.325)</strong></li>
 <li> 2021/03 -- One book chapter has been published in <strong>World Scientific</strong></li>
 <li> 2021/03 -- One paper has been accepted by <strong>IEEE Transactions on Pattern Analysis and Machine Intelligence (IF: 17.861)</strong></li>
